--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,20 @@
+* {
+  list-style: none;
+  text-decoration: none;
+}
+
+/* NAVBAR */
+.NavBar {
+  height: 10vh;
+}
+.CartWidget {
+  display: flex;
+  width: 22vw;
+  gap: 5%;
+}
+#dropDown:hover {
+  background-color: rgba(245, 235, 224, 1);
+}
 /* HERO component */
 .Hero {
   display: grid;
@@ -15,23 +32,6 @@
   justify-content: center;
   align-items: center;
   padding: 12%;
-}
-
-/* GREETING component */
-.greeting {
-  height: 8vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: rgb(240, 128, 128);
-  background: rgb(237, 237, 233);
-  background: linear-gradient(
-    144deg,
-    rgba(237, 237, 233, 1) 0%,
-    rgba(214, 204, 194, 1) 34%,
-    rgba(245, 235, 224, 1) 48%,
-    rgba(227, 213, 202, 1) 66%
-  );
 }
 
 /* FORM component */
@@ -87,4 +87,129 @@
   justify-content: center;
   align-items: center;
   font-size: 1.1rem;
+}
+
+/* items area  */
+
+.counterDiv {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.cards {
+  margin: 0 auto;
+  margin-bottom: 8%;
+  width: 95vw;
+  display: grid;
+  grid-template-columns: repeat(3, 400px);
+  place-items: center;
+  justify-content: center;
+  gap: 4%;
+}
+
+.link {
+  text-decoration: none;
+  color: black;
+}
+
+.btnLink {
+  border: 1px solid rgb(187, 119, 119);
+  border-bottom-left-radius: 18px;
+  border-top-right-radius: 18px;
+  padding: 2.8%;
+  text-decoration: none;
+  color: rgb(142, 71, 71);
+  transition: 0.3s;
+}
+
+.btnLink:hover {
+  background-color: rgb(168, 90, 90);
+  color: whitesmoke;
+  transition: 0.3s;
+}
+.card {
+  display: flex;
+  flex-direction: row;
+  margin: 0 auto;
+  margin-top: 4%;
+  margin-bottom: 4%;
+  width: 30%;
+}
+
+#itemImg {
+  width: 100%;
+}
+
+#itemCard {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  width: 80vw;
+}
+#itemCardText {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+#itemText {
+  list-style: circle;
+  text-align: center;
+  padding: 8%;
+}
+#precio {
+  text-align: center;
+  padding: 4%;
+  font-size: 1.4rem;
+  font-weight: 700;
+}
+#itemName {
+  font-size: 1.4rem;
+  text-align: center;
+  font-weight: 700;
+}
+.btnCount {
+  padding: 2%;
+  background-color: antiquewhite;
+  border-bottom-left-radius: 18px;
+  border-top-right-radius: 18px;
+}
+.count {
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+#tela {
+  text-align: center;
+  padding: 14%;
+  font-size: 1.2rem;
+  font-style: italic;
+}
+.divBtn {
+  display: flex;
+  justify-content: center;
+}
+.cardCategory {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  place-content: center;
+  place-items: center;
+}
+
+.aboutContainer {
+  display: flex;
+  justify-content: space-between;
+}
+.about {
+  width: 90vw;
+  height: 68vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 6%;
+}
+.about h1 {
+  font-size: 2.1rem;
+}
+.about p {
+  font-size: 1.2rem;
 }
