--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,6 @@
   padding: 0;
   box-sizing: border-box;
   list-style: none;
+  text-decoration: none;
   font-family: 'Montserrat', sans-serif;
 }
