entrega final proyecto Coder House

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   list-style: none;
   text-decoration: none;
 }
+a,
+Link {
+  text-decoration: none;
+}
 
 /* NAVBAR */
 .NavBar {
@@ -117,7 +121,7 @@
   border: 1px solid rgb(187, 119, 119);
   border-bottom-left-radius: 18px;
   border-top-right-radius: 18px;
-  padding: 2.8%;
+  padding: 12px;
   text-decoration: none;
   color: rgb(142, 71, 71);
   transition: 0.3s;
@@ -212,4 +216,96 @@
 }
 .about p {
   font-size: 1.2rem;
+}
+
+/* ! CART */
+.cartPage {
+  width: 95%;
+  margin: 2%;
+}
+.cartProd {
+  text-align: center;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 2%;
+  padding: 1.5%;
+  border: 0.5px solid rgb(187, 119, 119);
+}
+.cartImg {
+  width: 350px;
+}
+
+.emptyCart {
+  margin: 6% auto;
+  background-color: aquamarine;
+  border-bottom-left-radius: 25px;
+  border-top-right-radius: 25px;
+  border: 1px solid black;
+  width: 50%;
+  height: 50vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.emptyBtn {
+  display: flex;
+  margin-top: 2%;
+  margin-left: 86vw;
+}
+
+.btnCenter {
+  display: flex;
+  justify-content: center;
+  margin: 2%;
+}
+.btnFinal {
+  width: 18rem;
+  height: 3.2rem;
+  text-align: center;
+}
+
+/* ! CheckOut Page */
+.checkContainer {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  place-items: center;
+  padding: 4%;
+}
+.formLeft form {
+  width: 32vw;
+  height: 60vh;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+form input {
+  margin: 2%;
+  padding: 2%;
+  border-bottom-left-radius: 25px;
+  border-top-right-radius: 25px;
+}
+.prodRight {
+  width: 32vw;
+}
+
+.rsmProds {
+  border: 1px solid rgb(187, 119, 119);
+  border-bottom-left-radius: 25px;
+  border-top-right-radius: 25px;
+  display: flex;
+  flex-direction: column;
+  gap: 4%;
+  margin: 2%;
+  padding: 2%;
+}
+.btnBuy {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.buyBtn {
+  width: 18vw;
+  margin-bottom: 4%;
 }
